2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Replaced some uses of isLastUse() by the safer isPairDead().

2011-11-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merged the addrspacequal branch (named address spaces).

2011-11-28 Borut Razem <borut.razem AT gmail.com>

	* sim/ucsim/libltdl: direcrory removed since it is not used

2011-11-27 Borut Razem <borut.razem AT gmail.com>

	* Small Device C Compiler 3.1.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.1.1
	* support/scripts/gen_known_bugs.pl: adopted to the new SF bug tracker

2011-11-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3440327.

2011-11-17 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCast.c,
	  src/SDCCopt.c:
	  Error message for implicit casts between named address spaces, fix live-range analysis (regression tests passing now).

2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCerr.h,
	  src/SDCCerr.c:
	  Error message for attemting to use named address spacces for auto variables.

2011-11-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Fix broken control and data flow handling (regression tests passing now, exept for bug-895992.c).

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Improve handling of variables in named address space passed as parameters.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c:
	  Avoid emitting some unecessary bank switching calls.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCast.c:
	  Keep global named address spaces alive over functions.

2011-11-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c: